# dana-cockfight

./: .env.example  .gitignore  generate-image.ts  pyproject.toml  requirements.txt  task.md
data/draw/fight_1/: dialogue.json
data/draw/fight_2/: dialogue.json
data/draw/fight_3/: dialogue.json
data/images/andrew_3/: context.txt
data/images/bohdan/: context.txt
data/images/oleg/: context.txt
data/images/petro/: context.txt
data/images/roma/: context.txt
data/images/vadym/: context.txt
scripts/: generate_competition_image.py  generate_draw_content.py  generate_presentation_images.py
specs/: dana-cockfight-telegram-bot.md  enhanced-draw-matchup-announcements.md  fighter-descriptions-and-presentation-images.md
src/: __init__.py  bot.py  collage_generator.py  config.py  image_generator.py  prompts.py  state_manager.py  text_generator.py
